# DriFox-pyside6

./: .gitignore  AGENTS.md  LGPL_COMPLIANCE.md  LICENSE.LGPL-3.0  README.md  THIRD_PARTY_NOTICES.md  build.py  create_dmg.py  generate_icon_qrc.py  main.py  pyproject.toml  requirements.txt
app/: cli.py  constants.py  main_widget.py  tool_popup.py  tray_manager.py  update_checker.py
app/core/: __init__.py  agent.py  backend.py  builtin_commands.py  chat_session.py  coding_plan_fetcher.py  command_manager.py  context_builder.py  history_compactor.py  hook_manager.py  memory_manager.py  message_content.py  model_capabilities.py  plugin_manager.py  project_notes_manager.py  provider_profile.py  single_instance.py  token_estimator.py  tool_call_parser.py  tool_executor.py  tool_permission_controller.py  tool_result_persister.py
app/core/conversation/: __init__.py  config.py  core.py  executor.py
app/core/conversation/adapters/: __init__.py  auto_loop.py  base.py  gateway.py  ui.py
app/core/engines/: __init__.py  base.py
app/core/engines/auto_loop/: __init__.py  config.py  engine.py  prompt_composer.py
app/core/engines/gateway/: __init__.py  engine.py
app/core/engines/ui/: __init__.py  engine.py
app/core/lsp/: __init__.py  lsp_client.py  lsp_config.py  lsp_manager.py  lsp_tools.py
app/core/store/: __init__.py  file_operation_repository.py  input_history_repo.py  key_documents_repository.py  memory_repository.py  project_notes_repository.py  serde.py  session_repository.py  session_store.py  subagent_log_repository.py
app/core/workers/: __init__.py  auto_loop_worker.py  cache_tracker.py  chat_worker.py  chat_worker_state.py  shell_task.py  subagent_worker.py  topic_summary.py  worker_event_bus.py
app/core/workers/error_handler/: __init__.py  error_classifier.py  retry_helper.py  smart_retry.py
app/gateway/: __init__.py  base.py  config.py  manager.py  message_handler.py  session_manager.py
app/gateway/adapters/: __init__.py  dingtalk.py  discord.py  extra.py  feishu.py  telegram.py  wecom.py
app/gateway/local_service/: __init__.py  api_server.py  isolated_context.py  session_handler.py
app/gateway/utils/: __init__.py  gitee_uploader.py
app/tools/: __init__.py  automation.py  command_safety.py  diagnostics_tools.py  file_tools.py  mcp_tools.py  result.py  shell_compressor.py  task_tools.py  terminal_tools.py  tool_classifier.py  tool_name_mapper.py  web_tools.py
app/utils/: autoloop_utils.py  config.py  db_manager.py  design_tokens.py  diff_viewer.py  file_operation_recorder.py  fluent_shim.py  git_worktree.py  history_manager.py  icon_name_map.py  icons_rc.py  startup_manager.py  theme_manager.py  utils.py  web_channel.py  web_profile.py
app/widgets/: __init__.py  balance_display.py  bottom_input_area.py  coding_plan_ring.py  context_usage_ring.py  conversation_node_preview.py  elided_label.py  file_undo_dialog.py  list_item_factory.py  message_card.py  model_list_edit_dialog.py  render_helpers.py  searchable_editable_combobox.py  ui_helpers.py  worktree_section.py
app/widgets/cards/: __init__.py  card_container.py  card_manager.py
app/widgets/cards/floating/: command_card.py  file_mention_card.py  question_floating_widget.py  sub_agent_compact_widget.py  sub_agent_floating_widget.py  todo_floating_widget.py  undo_delete_card.py
app/widgets/cards/settings/: __init__.py  auto_loop_card.py  base_settings_card.py  gateway_setting_card.py  history_card.py  hook_setting_card.py  list_setting_card.py  llm_settings_card.py  lsp_setting_card.py  mcp_setting_card.py  memory_card.py  model_config_card.py  model_selector_card.py  project_selector_card.py  provider_edit_card.py  provider_setting_card.py  system_card_frame.py  tool_control_card.py
icons/: icons.qrc
plugins/system/: .mcp.json  README.md
plugins/system/.drifox-plugin/: plugin.json
plugins/system/agents/: auto_loop.md  build.md  code-reviewer.md  compaction.md  explore.md  plan.md  review.md  summary.md  task-executor.md
plugins/system/commands/: branch.md  compact.md  debug.md  finish-branch.md  new-window.md  new.md  plugin.md  project-note.md  quota-setting.md  receive-review.md  remember.md  review.md  subagent_dag.md  subagents.md  theme.md  todos.md  verify.md  webresearch.md  wordcloud.md  worktree.md
plugins/system/skills/agent-canvas-designer/: SKILL.md
plugins/system/skills/brainstorming/: SKILL.md  spec-document-reviewer-prompt.md  visual-companion.md
plugins/system/skills/github-ops/: SKILL.md
plugins/system/skills/grill-with-docs/: SKILL.md
plugins/system/skills/minimax-image-understanding/: SKILL.md
plugins/system/skills/session-summary/: SKILL.md
plugins/system/skills/setup-matt-pocock-skills/: SKILL.md
plugins/system/skills/skill-creator/: SKILL.md
plugins/system/skills/to-issues/: SKILL.md
plugins/system/themes/amber/: amber.yaml
plugins/system/themes/bordeaux/: bordeaux.yaml
plugins/system/themes/fallout/: fallout.yaml
plugins/system/themes/forest/: forest.yaml
(+46 files in other folders)
