[project]
name = "drifox"
version = "0.2.8"
description = "DriFox - AI Chat Desktop Application"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "98-afk", email = "98-afk@drifox.com"}
]
keywords = ["ai", "chat", "llm", "desktop", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 核心运行时依赖 (PySide6)
dependencies = [
    "PySide6>=6.8.0",   # 包含 QtCore/QtGui/QtWidgets/QtWebEngine/QtNetwork 等
    "loguru>=0.7.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "html2text>=2020.1.16",
    "beautifulsoup4>=4.12.0",
    "PyYAML>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "psutil",
    "markdown",
    "pygments",
    "requests",
    "orjson>=3.8.0",
    "pypinyin",
    # 桌面自动化 (pynput + mss 组合)
    "pynput>=1.7.6",
    "mss>=9.0.1",
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    # 插件热更新
    "watchfiles>=1.0.0",
    # LSP 集成 (Language Server Protocol)
    "pygls>=2.0.0",
    "lsprotocol",
    # aiohttp (gateway + LSP)
    "aiohttp>=3.9.0",
]

# 可选依赖 - Gateway 通讯平台
[project.optional-dependencies]
gateway = [
    "dingtalk-stream>=0.20",
    "python-telegram-bot>=20.0",
    "discord.py>=2.0",
    "slack-sdk>=3.0",
    "lark-oapi>=1.0",
    "aiohttp>=3.9.0",
]
# 开发依赖
dev = [
    "pyinstaller>=6.16.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
# 全部依赖
all = [
    "drifox[gateway,dev]",
]

# 构建系统配置
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# 打包配置
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# UV 依赖组（与 optional-dependencies 一致）
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# uv 多平台依赖解析配置
# 声明项目需要支持的目标平台，确保 uv lock 生成的锁文件兼容所有平台
[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

# 打包为单文件应用 (Windows)
[tool.pyinstaller.name]
onefile = true
console = false
name = "Drifox"